# mybot

./: config.ini  main.py  pyproject.toml  replit_zip_error_log.txt
quran/: quran.py
