[tool.poetry]
name = "repl_nix_IslamBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
PyMySQL = "^1.0.2"
fuzzywuzzy = "^0.18.0"
html2text = "^2020.1.16"
hijri-converter = "^2.2.4"
aiomysql = "^0.1.1"
bs4 = "^0.0.1"
discord = "^2.1.0"
aiohttp = "^3.8.4"
python-dateutil = "^2.8.2"
topggpy = "^1.4.0"
"discord.py" = "^2.3.2"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
